src/scss/layout/_UI.scss
@use '../abstracts/variables' as v;
@use '../abstracts/mixins' as m;

.appContainer {
  @include m.respond(tablet) {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    min-block-size: 100vh;
  }

  .img {
    block-size: 20rem;
    background-image: url('../img/1.jpg');
    background-size: cover;
    background-position: center;

    @include m.respond(tablet) {
      block-size: auto;
    }
  }

  .app {
    margin-inline: auto;
    padding-block: 3rem;
    padding-inline: 1.5rem;
    inline-size: 95%;

    @include m.respond(tablet) {
      inline-size: 75%;
      overflow: scroll;
      overflow-x: unset;
      scrollbar-width: thin;
      scrollbar-color: transparent transparent;
    }
  }
}

.pageName {
  margin-block: 5rem;
}

.topBar {
  margin-block: v.$gap;

  @include m.respond(tablet) {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .btn {
    @include m.button(v.$colorBlack, v.$colorWhite);
    margin: unset;
  }
}

